--- a/test.html
+++ b/test.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html lang="fr" dir="ltr">
   <head>
+    <style type="text/css">
+      h1{
+        position: absolute;
+        top: 40%;
+        width: 100%;
+        text-align: center;
+      }
+    </style>
     <meta charset="utf-8">
-    <title></title>
+    <title>HI</title>
   </head>
   <body>
-
+    <h1>HI HI</h1>
   </body>
 </html>
