--- a/test.html
+++ b/test.html
@@ -2,6 +2,7 @@
 <html lang="fr" dir="ltr">
   <head>
     <style type="text/css">
+
       h1{
         position: absolute;
         top: 40%;
@@ -13,6 +14,6 @@
     <title>HI</title>
   </head>
   <body>
-    <h1>HI HI</h1>
+    <h1>HI Hello</h1>
   </body>
 </html>
